# microfuel

./: .gitignore  404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
comparison/: index.html
data/: .gitignore  config.example.toml  index.html
data/checkpoints/: .gitignore
data/checkpoints/v1.0-offline/: config.json
data/checkpoints/v1.0-offline-tas/: config.json
data/checkpoints/v1.0-realtime/: config.json
data/plots/: .gitignore
data/preprocessed/: .gitignore  split_phase1.json  splits_phase1.json  stats_phase1.json
docs/: README.md  api.md  comparison.md  concepts.md  data.md  problem.md  quickstart.md
problem/: index.html
quickstart/: index.html
scripts/: data.py  main.py  migrate.py  plots.py
search/: search_index.json
src/microfuel/: __init__.py  dataloader.py  model.py
src/microfuel/datasets/: preprocessed.py  raw.py
src/prc25/: __init__.py  dataloader.py  hacks.py  model.py  plot.py
src/prc25/datasets/: preprocessed.py  raw.py
