[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microfuel"
version = "0.0.0"
description = "A high-performance, minimal surrogate model for aircraft fuel consumption, trained using open ADS-B and ACARS data."
authors = [{ name = "Abraham Cheung", email = "abraham@ylcheung.com" }]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "flash-linear-attention>=0.3.2",
    "isqx>=0.1.1",
    "numba>=0.62.1",
    "polars>=1.34",
    "rich>=14",
    "tomli>=2 ; python_full_version < '3.11'",
]

[project.optional-dependencies]
cli = ["typer>=0.19"]
plots = ["matplotlib>=3.10"]
pyqt6 = ["pyqt6>=6.10.0"]
era5 = ["dask>=2025.11.0", "xarray>=2025.6.1"]

[dependency-groups]
docs = ["mkdocs-material[imaging]>=9.6.14", "mkdocstrings-python>=1.16.11"]
lint = ["ruff>=0.14.7"]
wandb = ["wandb>=0.22.2"]
wrangler = ["ipykernel>=6.30.1", "pandas>=2.3.3"]

[tool.ruff]
include = ["notebooks/**/*.ipynb", "scripts/**/*.py", "src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "NPY",    # numpy
    "NPY201", # numpy
    "DTZ",    # flake8-datetimez
    "RUF",
]
ignore = [
    "F722", # see astral-sh/ruff#9860
]
